--- a/Index.html
+++ b/Index.html
@@ -8,8 +8,10 @@
 
     <body>
         <h1>Odin Recipes</h1>
-
-        <a href="./vodkapasta.html">Vodka Pasta</a>
+        <ul>
+            <li><a href="./vodkapasta.html">Vodka Pasta</a></li>
+            <li><a href="./hotdog.html">Glizzy</a></li>
+        </ul>
     </body>
 
 
