--- a/vodkapasta.html
+++ b/vodkapasta.html
@@ -13,6 +13,7 @@
         <h2>Description</h2>
         <p><strong>Penne alla vodka</strong> is a pasta dish made with vodka and penne pasta, usually made with heavy cream, crushed tomatoes, onions, and sometimes sausage, 
             pancetta or peas. The recipe became very popular in <em>Italy</em> and in the United States around the 1980s, when it was offered to discotheque customers.</p>
+        <h3>Ingredients</h3>
             <ul>
                 <li>3 tbsp. butter</li>
                 <li>1 shallot</li>
@@ -23,12 +24,13 @@
     </body>
     
     <body>
-        <h3>How to make it!</h3>
+        <h2>How to make it!</h2>
         <ol>
             <li>You do this</li>
             <li>You do that</li>
-            <li>You <strong>CANNOT</strong>forget this</li>
+            <li>You <strong>CANNOT</strong> forget this</li>
             <li>WALLAH!!! ITS DONE</li>
         </ol>
     </body>
+
 </html>
